Full-Scan for class changes
Scanned through all of the themes for class changes and fixed them

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 6.6
+ * @version 6.7
  */
 
 /* Main Background */
@@ -1609,18 +1609,18 @@
 }
 
 
-.embedFull_ad0b71 {
+.embedFull_b0068a {
     background: rgba(0, 0, 0, .5);
 }
 
 .theme-dark .wrapperAudio_f72aac,
-.attachment_a4623d {
+.attachment_b52bef {
     background: rgba(0, 0, 0, .5);
     border-color: rgba(255, 255, 255, .3);
 }
 
-.filenameLinkWrapper_a4623d,
-.filenameLinkWrapper_a4623d a,
+.filenameLinkWrapper_b52bef,
+.filenameLinkWrapper_b52bef a,
 .metadataContent_f72aac a {
    color: #AEC4D4;
 }
@@ -2375,12 +2375,12 @@ span.button_f67531.enabled_f67531:hover path {
     border-radius: 5px;
 }
 
-.moreUsers_c47562 {
+.moreUsers_d03bba {
     background-color: rgba(0, 0, 0, .6);
     color: white;
 }
 
-.size24_c47562 .moreUsers_c47562 {
+.size24_c47562 .moreUsers_d03bba {
     border-radius: 5px;
     padding: 1px 4px;
 }
@@ -2442,21 +2442,21 @@ span.button_f67531.enabled_f67531:hover path {
     background-color: transparent;
 }
 
-.attachment_b211c6,
-.avatar_b211c6 {
+.attachment_b75bb9,
+.avatar_b75bb9 {
     background-color: #912;
 }
 
-.wrapper_b211c6 {
+.wrapper_b75bb9 {
     background-color: transparent;
 }
 
-.wrapper_b9fe76 {
+.wrapper_a71a1c {
     background-color: rgba(0, 0, 0, .5);
 }
 
-.guildIconExpired_b9fe76,
-.guildIcon_b9fe76 {
+.guildIconExpired_a71a1c,
+.guildIcon_a71a1c {
     background-color: black;
     border-radius: 5px;
 }
@@ -2664,13 +2664,13 @@ span.button_f67531.enabled_f67531:hover path {
     background-color: transparent;
 }
 
-.theme-dark .autocomplete_f23da8 {
+.theme-dark .autocomplete_bcc24e {
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
     background-color: transparent;
 }
 
-.theme-dark .clickable_f23da8[aria-disabled=false]>.base_f23da8:hover,
-.clickable_f23da8[aria-selected=true]>.base_f23da8 {
+.theme-dark .clickable_bcc24e[aria-disabled=false]>.base_bcc24e:hover,
+.clickable_bcc24e[aria-selected=true]>.base_bcc24e {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -2687,12 +2687,12 @@ span.button_f67531.enabled_f67531:hover path {
 }
 
 .unreadImportant_d8bfb3,
-.item_fd07a3 {
+.item_c4cd66 {
     background-color: #C13;
 }
 
 .unreadImportant_d8bfb3,
-.item_fd07a3 {
+.item_c4cd66 {
     position: absolute;
     height: 12px !important;
     width: 10px;
@@ -2806,7 +2806,7 @@ span.button_f67531.enabled_f67531:hover path {
     border: none;
 }
 
-.textContainer_ad9cbd .hljs {
+.textContainer_d8e2d0 .hljs {
     background: none;
 }
 
@@ -2880,8 +2880,8 @@ span.button_f67531.enabled_f67531:hover path {
     background-color: transparent;
 }
 
-.theme-dark .card_eb1ca6,
-.theme-dark .iconMask_eb1ca6 {
+.theme-dark .card_e90879,
+.theme-dark .iconMask_e90879 {
     background-color: transparent !important;
 }
 
@@ -3050,7 +3050,7 @@ span.button_f67531.enabled_f67531:hover path {
     border-radius: 5px;
 }
 
-.border_a5cd29.speaking_a5cd29 {
+.border_db83a2.speaking_db83a2 {
     border: 4px solid #C13;
     box-shadow: none;
     border-radius: 5px;
@@ -3073,7 +3073,7 @@ span.button_f67531.enabled_f67531:hover path {
     background-color: transparent;
 }
 
-#app-mount .botTagRegular_a02df3 {
+#app-mount .botTagRegular_a9e77f {
     background: #912;
     color: white;
 }
@@ -3229,6 +3229,10 @@ span.button_f67531.enabled_f67531:hover path {
 .icon_e378b3 {
     color: white;
 }
+.icon_e378b3 path {
+    fill: currentColor;
+  }
+  
 
 /* Active Thread List */
 .header_e664f3 {
@@ -3836,40 +3840,40 @@ span.button_f67531.enabled_f67531:hover path {
 
 .item_b05c08,
 .group_b05c08:not(.disabled_b05c08) .item_b05c08:not(.selected_b05c08):hover,
-.item_e3c4bb,
-.item_e3c4bb:hover {
+.item_d25d19,
+.item_d25d19:hover {
     background-color: #2D2D2D;
 }
 
-.layoutStyle_a49993 .item_e3c4bb[aria-label="Passthrough"] {
+.layoutStyle_a49993 .item_d25d19[aria-label="Passthrough"] {
     color: #FFDB4D;
 }
 
-.passthrough_e3c4bb.selected_e3c4bb {
+.passthrough_d25d19.selected_d25d19 {
     background-color: #FFDB4D !important;
     color: black !important;
 }
 
 .deny_b05c08,
 .cross_a06168,
-.deny_e3c4bb {
+.deny_d25d19 {
     color: #F42626;
 }
 
 .deny_b05c08.selected_b05c08,
-.deny_e3c4bb.selected_e3c4bb {
+.deny_d25d19.selected_d25d19 {
     background-color: #F42626 !important;
     color: white;
 }
 
 .allow_b05c08,
 .check_a06168,
-.allow_e3c4bb {
+.allow_d25d19 {
     color: #3DD828;
 }
 
 .allow_b05c08.selected_b05c08,
-.allow_e3c4bb.selected_e3c4bb {
+.allow_d25d19.selected_d25d19 {
     background-color: #3DD828 !important;
     color: white;
 }
@@ -4134,11 +4138,11 @@ span.button_f67531.enabled_f67531:hover path {
     background: none;
 }
 
-.textContainer_ad9cbd {
+.textContainer_d8e2d0 {
     background-color: rgba(255, 255, 255, .12);
 }
 
-.footer_ad9cbd {
+.footer_d8e2d0 {
     background-color: rgba(255, 255, 255, .12);
 }
 
@@ -4993,4 +4997,12 @@ span.button_f67531.enabled_f67531:hover path {
 /* Red Button Color */
 .red-button {
     color: #D12;
+}
+
+.container_b56bbc {
+    background-color: transparent;
+}
+
+.theme-dark .sidebarContainer_a3a4ce {
+    background: none;
 }
