--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 4
+ * @version 4.1
 */
 
 /* Rem Main Picture */
@@ -598,7 +598,7 @@
     color: white !important;
 }
 
-.guildCategorySeparator_a7a485 {
+.guildCategorySeparator_dfa278 {
     border: none;
 }
 
@@ -1231,7 +1231,7 @@
     background-color: black;
 }
 
-.item_fd07a3 {
+.item_c4cd66 {
     background-color: #6cb4fe;
 }
 
@@ -1383,7 +1383,7 @@
     color: white;
 }
 
-.botTagRegular_a02df3 {
+.botTagRegular_a9e77f {
     background: #6cb4fe !important;
     color: white !important;
 }
@@ -1406,7 +1406,7 @@
     color: white;
 }
 
-.embedFull_ad0b71 {
+.embedFull_b0068a {
     border-left: none;
     background: rgba(0, 0, 0, .2);
 }
@@ -1419,7 +1419,7 @@
     font-weight: 600;
 }
 
-.wrapper_b9fe76 {
+.wrapper_a71a1c {
     background-color: rgba(108, 180, 254, .3);
     border: 2px solid rgba(108, 180, 254, .5);
     background-clip: border-box;
@@ -1427,7 +1427,7 @@
 }
 
 .theme-dark .guildIconImage_b9fe76,
-.guildIcon_b9fe76 {
+.guildIcon_a71a1c {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -1739,8 +1739,7 @@ button.button_f67531.enabled_f67531:hover {
     background-color: rgba(0, 0, 0, .15);
 }
 
-.withTagAsButton_b2ca13:hover, 
-.withTagless_b2ca13:hover {
+.avatarWrapper_b2ca13:hover {
     background-color: rgba(0, 0, 0, .45);
     color: white;
 }
@@ -1865,7 +1864,7 @@ button.button_f67531.enabled_f67531:hover {
     color: white;
 }
 
-.moreUsers_c47562 {
+.moreUsers_d03bba {
     background-color: rgba(0, 0, 0, .2);
     color: white;
 }
@@ -2141,12 +2140,12 @@ button.button_f67531.enabled_f67531:hover {
     box-shadow: none;
 }
 
-.akaBadge__27cd4, 
-.nicknames__12efb {
+.akaBadge_d6c26f, 
+.nicknames_d6c26f {
     color: white;
 }
 
-.akaBadge__27cd4 {
+.akaBadge_d6c26f {
     background-color: #6cb4fe;
 }
 
@@ -2160,14 +2159,14 @@ button.button_f67531.enabled_f67531:hover {
     background-color: transparent;
 }
 
-.attachment_b211c6, 
-.avatar_b211c6, 
-.blob_b211c6 {
+.attachment_b75bb9, 
+.avatar_b75bb9, 
+.blob_b75bb9 {
     background-color: #6cb4fe;
     opacity: .4 !important;
 }
 
-.wrapper_b211c6 {
+.wrapper_b75bb9 {
     background-color: rgba(0, 0, 0, .2);
 }
 
@@ -2181,8 +2180,8 @@ button.button_f67531.enabled_f67531:hover {
     background-color: rgba(108, 180, 254, .7);
 }
 
-.textContainer_ad9cbd,
-.footer_ad9cbd {
+.textContainer_d8e2d0,
+.footer_d8e2d0 {
     background-color: #1c1c1c;
     border: none;
 }
@@ -2287,12 +2286,12 @@ button.button_f67531.enabled_f67531:hover {
     background-color: #6cb4fe !important;
 }
 
-.theme-dark .autocomplete_f23da8 {
+.theme-dark .autocomplete_bcc24e {
     background-color: #1c1c1c;
 }
 
-.clickable_f23da8[aria-disabled=false]>.base_f23da8:hover, 
-.clickable_f23da8[aria-selected=true]>.base_f23da8 {
+.clickable_bcc24e[aria-disabled=false]>.base_bcc24e:hover, 
+.clickable_bcc24e[aria-selected=true]>.base_bcc24e {
     background-color: rgba(108, 180, 254, .5);
 }
 
@@ -2300,7 +2299,7 @@ button.button_f67531.enabled_f67531:hover {
     background-color: rgba(0, 0, 0, .3);
 }
 
-.border_a5cd29.speaking_a5cd29 {
+.border_db83a2.speaking_db83a2 {
     box-shadow: inset 0 0 0 2px #6cb4fe,inset 0 0 0 3px black;
 }
 
@@ -2447,7 +2446,7 @@ button.button_f67531.enabled_f67531:hover {
     color: black !important;
 }
 
-.selected_e9f61e .layout_e9f61e .botTagRegular_a02df3 {
+.selected_e9f61e .layout_e9f61e .botTagRegular_a9e77f {
     border: 1px solid black;
 }
 
@@ -2467,8 +2466,8 @@ button.button_f67531.enabled_f67531:hover {
     color: white;
 }
 
-#app-mount .card_eb1ca6, 
-#app-mount .iconMask_eb1ca6 {
+#app-mount .card_e90879, 
+#app-mount .iconMask_e90879 {
     background-color: black;
 }
 
@@ -2920,7 +2919,7 @@ button.button_f67531.enabled_f67531:hover {
     background-color: transparent;
 }
 
-.guildCategorySeparator_a7a485 {
+.guildCategorySeparator_dfa278 {
     border: none;
 }
 
@@ -3282,6 +3281,14 @@ button.button_f67531.enabled_f67531:hover {
     background-color: #6cb4fe;
 }
 
+.icon_e378b3 {
+    color: #000;
+}
+    
+.icon_e378b3 path {
+    fill: currentColor;
+}
+
 .mulitplePlaceholderUsername_fb03e5,
 .placeholderAvatar_fb03e5,
 .placeholderUsername_fb03e5,
@@ -3396,40 +3403,40 @@ button.button_f67531.enabled_f67531:hover {
 }
 
 .item_b05c08,
-.item_e3c4bb,
-.item_e3c4bb:hover {
+.item_d25d19,
+.item_d25d19:hover {
     background-color: #2D2D2D;
 }
 
-.layoutStyle_a49993 .item_e3c4bb[aria-label="Passthrough"] {
+.layoutStyle_a49993 .item_d25d19[aria-label="Passthrough"] {
     color: #FFDB4D;
 }
 
-.passthrough_e3c4bb.selected_e3c4bb {
+.passthrough_d25d19.selected_d25d19 {
     background-color: #FFDB4D !important;
     color: black !important;
 }
 
 .deny_b05c08,
 .cross_a06168,
-.deny_e3c4bb {
+.deny_d25d19 {
     color: #F42626;
 }
 
 .deny_b05c08.selected_b05c08,
-.deny_e3c4bb.selected_e3c4bb {
+.deny_d25d19.selected_d25d19 {
     background-color: #F42626 !important; 
     color: white;
 }
 
 .allow_b05c08,
 .check_a06168,
-.allow_e3c4bb {
+.allow_d25d19 {
     color: #3DD828;
 }
 
 .allow_b05c08.selected_b05c08,
-.allow_e3c4bb.selected_e3c4bb {
+.allow_d25d19.selected_d25d19 {
     background-color: #3DD828 !important;
     color: white;
 }
@@ -4415,4 +4422,12 @@ button.button_f67531.enabled_f67531:hover {
 
 .container_bf550a {
   background: none;
+}
+
+.container_b56bbc {
+    background-color: transparent;
+}
+
+.theme-dark .sidebarContainer_a3a4ce {
+    background: none;
 }
