--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 6.2
+ * @version 6.3
  */
 
 /* Main Background */
@@ -289,7 +289,7 @@
 
 /* -------------------------------------------- */
 
-.botTagRegular_a02df3 {
+.botTagRegular_a9e77f {
     background: #2AB;
 }
 
@@ -1758,7 +1758,7 @@
     width: 10px;
 }
 
-.embedFull_ad0b71 {
+.embedFull_b0068a {
     border-left: none;
     background: rgba(0, 0, 0, .4);
 }
@@ -2089,12 +2089,12 @@
     color: white;
 }
 
-.moreUsers_c47562 {
+.moreUsers_d03bba {
     background-color: rgba(0, 0, 0, .6);
     color: white;
 }
 
-.size24_c47562 .moreUsers_c47562 {
+.size24_c47562 .moreUsers_d03bba {
     border-radius: 5px;
     padding: 1px 4px;
 }
@@ -2226,12 +2226,12 @@
     background-color: transparent;
 }
 
-.theme-dark .clickable_f23da8[aria-disabled=false]>.base_f23da8:hover,
-.clickable_f23da8[aria-selected=true]>.base_f23da8 {
+.theme-dark .clickable_bcc24e[aria-disabled=false]>.base_bcc24e:hover,
+.clickable_bcc24e[aria-selected=true]>.base_bcc24e {
     background-color: rgba(0, 0, 0, .3);
 }
 
-.theme-dark .autocomplete_f23da8 {
+.theme-dark .autocomplete_bcc24e {
     box-shadow: none;
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
     border: 2px ridge #2AB;
@@ -2301,12 +2301,12 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.attachment_b211c6,
-.avatar_b211c6 {
+.attachment_b75bb9,
+.avatar_b75bb9 {
     background-color: #2AB;
 }
 
-.wrapper_b211c6 {
+.wrapper_b75bb9 {
     background-color: transparent;
 }
 
@@ -2424,7 +2424,7 @@
     border: 2px solid #2AB;
 }
 
-.item_fd07a3 {
+.item_c4cd66 {
     height: 14px !important;
     background-color: #2AB !important;
 }
@@ -2447,12 +2447,12 @@
     border-radius: 6px;
 }
 
-.wrapper_b9fe76 {
+.wrapper_a71a1c {
     background-color: rgba(0, 0, 0, .5);
 }
 
-.guildIconExpired_b9fe76,
-.guildIcon_b9fe76 {
+.guildIconExpired_a71a1c,
+.guildIcon_a71a1c {
     background-color: #2AB;
     border-radius: 5px;
 }
@@ -2536,8 +2536,8 @@
     background-color: transparent;
 }
 
-.theme-dark .card_eb1ca6,
-.theme-dark .iconMask_eb1ca6 {
+.theme-dark .card_e90879,
+.theme-dark .iconMask_e90879 {
     background-color: transparent !important;
 }
 
@@ -2712,7 +2712,7 @@
     border-radius: 5px;
 }
 
-.border_a5cd29.speaking_a5cd29 {
+.border_db83a2.speaking_db83a2 {
     border: 4px solid red;
     box-shadow: none;
     border-radius: 5px;
@@ -2951,6 +2951,10 @@
 .icon_e378b3 {
     color: var(--header-primary);
 }
+.icon_e378b3 path {
+    fill: currentColor;
+}
+  
 
 .iconContainer__1b9f0 {
     border-radius: 5px;
@@ -3612,40 +3616,40 @@
 }
 
 .item_b05c08,
-.item_e3c4bb,
-.item_e3c4bb:hover {
+.item_d25d19,
+.item_d25d19:hover {
     background-color: #2D2D2D;
 }
 
-.layoutStyle_a49993 .item_e3c4bb[aria-label="Passthrough"] {
+.layoutStyle_a49993 .item_d25d19[aria-label="Passthrough"] {
     color: #FFDB4D;
 }
 
-.passthrough_e3c4bb.selected_e3c4bb {
+.passthrough_d25d19.selected_d25d19 {
     background-color: #FFDB4D !important;
     color: black !important;
 }
 
 .deny_b05c08,
 .cross_a06168,
-.deny_e3c4bb {
+.deny_d25d19 {
     color: #F42626;
 }
 
 .deny_b05c08.selected_b05c08,
-.deny_e3c4bb.selected_e3c4bb {
+.deny_d25d19.selected_d25d19 {
     background-color: #F42626 !important;
     color: white;
 }
 
 .allow_b05c08,
 .check_a06168,
-.allow_e3c4bb {
+.allow_d25d19 {
     color: #3DD828;
 }
 
 .allow_b05c08.selected_b05c08,
-.allow_e3c4bb.selected_e3c4bb {
+.allow_d25d19.selected_d25d19 {
     background-color: #3DD828 !important;
     color: white;
 }
@@ -4681,4 +4685,12 @@
 /* Red Button Color */
 .red-button {
     color: #D12;
+}
+
+.container_b56bbc {
+    background-color: transparent;
+}
+
+.theme-dark .sidebarContainer_a3a4ce {
+    background: none;
 }
