--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 6.4
+ * @version 6.5
  */
 
 /* Main Background */
@@ -270,7 +270,7 @@
 
 /* -------------------------------------------- */
 
-.botTagRegular_a02df3 {
+.botTagRegular_a9e77f {
     background: #f44;
 }
 
@@ -1434,7 +1434,7 @@
     padding: 0 5px;
 }
 
-.embedFull_ad0b71 {
+.embedFull_b0068a {
     border-left: none;
     background: rgba(0, 0, 0, .4);
 }
@@ -1761,12 +1761,12 @@
     background-color: rgba(255, 68, 68, .34);
 }
 
-.akaBadge__27cd4,
-.nicknames__12efb {
+.akaBadge_d6c26f,
+.nicknames_d6c26f {
     color: white;
 }
 
-.akaBadge__27cd4 {
+.akaBadge_d6c26f {
     background-color: #f44;
 }
 
@@ -1828,12 +1828,12 @@
     border: none;
 }
 
-.wrapper_b9fe76 {
+.wrapper_a71a1c {
     background-color: rgba(0, 0, 0, .6);
 }
 
-.guildIconExpired_b9fe76,
-.guildIcon_b9fe76 {
+.guildIconExpired_a71a1c,
+.guildIcon_a71a1c {
     background-color: rgba(255, 66, 66, .6);
     border-radius: 5px;
 }
@@ -2278,12 +2278,12 @@ button.button_f67531 {
     color: white;
 }
 
-.moreUsers_c47562 {
+.moreUsers_d03bba {
     background-color: rgba(0, 0, 0, .6);
     color: white;
 }
 
-.size24_c47562 .moreUsers_c47562 {
+.size24_c47562 .moreUsers_d03bba {
     border-radius: 5px;
     padding: 1px 4px;
 }
@@ -2322,24 +2322,24 @@ button.button_f67531 {
     background-color: transparent;
 }
 
-.theme-dark .card_eb1ca6,
-.theme-dark .iconMask_eb1ca6 {
+.theme-dark .card_e90879,
+.theme-dark .iconMask_e90879 {
     background-color: rgba(0, 0, 0, .3);
 }
 
-.theme-dark .card_eb1ca6:hover,
-.theme-dark .card_eb1ca6:hover .iconMask_eb1ca6,
-.theme-dark .iconMask_eb1ca6:hover,
-.theme-dark .iconMask_eb1ca6:hover .iconMask_eb1ca6 {
+.theme-dark .card_e90879:hover,
+.theme-dark .card_e90879:hover .iconMask_e90879,
+.theme-dark .iconMask_e90879:hover,
+.theme-dark .iconMask_e90879:hover .iconMask_e90879 {
     background-color: rgba(0, 0, 0, .7);
 }
 
-.card_eb1ca6:focus,
-.card_eb1ca6:hover {
+.card_e90879:focus,
+.card_e90879:hover {
     box-shadow: none;
 }
 
-.card_eb1ca6 {
+.card_e90879 {
     border-radius: 4px;
     background-color: transparent;
 }
@@ -2392,7 +2392,7 @@ button.button_f67531 {
     border-radius: 5px;
 }
 
-.item_fd07a3 {
+.item_c4cd66 {
     width: 13px;
     border-radius: 0 2px 2px 0;
     background-color: #F44;
@@ -2496,7 +2496,7 @@ button.button_f67531 {
     box-shadow: none;
 }
 
-.wrapper_b211c6 {
+.wrapper_b75bb9 {
     background-color: rgba(0, 0, 0, .4);
 }
 
@@ -2504,13 +2504,13 @@ button.button_f67531 {
     background-color: transparent;
 }
 
-.avatar_b211c6 {
+.avatar_b75bb9 {
     border-radius: 5px
 }
 
-.attachment_b211c6,
-.avatar_b211c6,
-.blob_b211c6 {
+.attachment_b75bb9,
+.avatar_b75bb9,
+.blob_b75bb9 {
     background-color: #f44;
 }
 
@@ -2697,13 +2697,13 @@ button.button_f67531 {
     background-color: transparent;
 }
 
-.theme-dark .autocomplete_f23da8 {
+.theme-dark .autocomplete_bcc24e {
     border: 2px solid #f44;
     background-image: -webkit-radial-gradient(50% 53%, ellipse cover, #292929 15%, #000000 71%);
 }
 
-.theme-dark .clickable_f23da8[aria-disabled=false]>.base_f23da8:hover,
-.clickable_f23da8[aria-selected=true]>.base_f23da8 {
+.theme-dark .clickable_bcc24e[aria-disabled=false]>.base_bcc24e:hover,
+.clickable_bcc24e[aria-selected=true]>.base_bcc24e {
     background-color: transparent;
     border: 2px solid #C67;
 }
@@ -2971,7 +2971,7 @@ button.button_f67531 {
     border-radius: 5px;
 }
 
-.border_a5cd29.speaking_a5cd29 {
+.border_db83a2.speaking_db83a2 {
     border: 4px solid red;
     box-shadow: none;
     border-radius: 5px;
@@ -3209,6 +3209,10 @@ button.button_f67531 {
 .icon_e378b3 {
     color: var(--header-primary);
 }
+.icon_e378b3 path {
+    fill: currentColor;
+}
+  
 
 .iconContainer__1b9f0 {
     border-radius: 5px;
@@ -3874,40 +3878,40 @@ button.button_f67531.enabled_f67531:hover {
 }
 
 .item_b05c08,
-.item_e3c4bb,
-.item_e3c4bb:hover {
+.item_d25d19,
+.item_d25d19:hover {
     background-color: #2D2D2D;
 }
 
-.layoutStyle_a49993 .item_e3c4bb[aria-label="Passthrough"] {
+.layoutStyle_a49993 .item_d25d19[aria-label="Passthrough"] {
     color: #FFDB4D;
 }
 
-.passthrough_e3c4bb.selected_e3c4bb {
+.passthrough_d25d19.selected_d25d19 {
     background-color: #FFDB4D !important;
     color: black !important;
 }
 
 .deny_b05c08,
 .cross_a06168,
-.deny_e3c4bb {
+.deny_d25d19 {
     color: #F42626;
 }
 
 .deny_b05c08.selected_b05c08,
-.deny_e3c4bb.selected_e3c4bb {
+.deny_d25d19.selected_d25d19 {
     background-color: #F42626 !important;
     color: white;
 }
 
 .allow_b05c08,
 .check_a06168,
-.allow_e3c4bb {
+.allow_d25d19 {
     color: #3DD828;
 }
 
 .allow_b05c08.selected_b05c08,
-.allow_e3c4bb.selected_e3c4bb {
+.allow_d25d19.selected_d25d19 {
     background-color: #3DD828 !important;
     color: white;
 }
@@ -4925,4 +4929,12 @@ button.button_f67531.enabled_f67531:hover {
 /* Red Button Color */
 .red-button {
     color: #D12;
+}
+
+.container_b56bbc {
+    background-color: transparent;
+}
+
+.theme-dark .sidebarContainer_a3a4ce {
+    background: none;
 }
