--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 6.2
+ * @version 6.3
  */
 
  .app_a01fb1 {
@@ -754,7 +754,7 @@
     border: 3px outset #242424;
 }
 
-.embedFull_ad0b71 {
+.embedFull_b0068a {
     border-left: none;
     background: rgba(0, 0, 0, .45);
 }
@@ -830,7 +830,7 @@
     fill: #61A5D8;
 }
 
-.botTagRegular_a02df3 {
+.botTagRegular_a9e77f {
     background: #61A5D8;
 }
 
@@ -847,11 +847,11 @@
     border-radius: 5px;
 }
 
-.size24_c47562 .moreUsers_c47562 {
+.size24_c47562 .moreUsers_d03bba {
     border-radius: 5px;
 }
 
-.moreUsers_c47562 {
+.moreUsers_d03bba {
     background-color: #76AAD9;
     font-weight: 300;
     color: white;
@@ -912,7 +912,7 @@
     background-color: rgba(0, 0, 0, .45);
 }
 
-.wrapper_b211c6 {
+.wrapper_b75bb9 {
     background-color: transparent;
 }
 
@@ -920,13 +920,13 @@
     background-color: rgba(0, 0, 0, .55);
 }
 
-.avatar_b211c6 {
+.avatar_b75bb9 {
     border-radius: 4px;
 }
 
-.attachment_b211c6,
-.avatar_b211c6,
-.blob_b211c6 {
+.attachment_b75bb9,
+.avatar_b75bb9,
+.blob_b75bb9 {
     background-color: #61A5D8;
     opacity: .5 !important;
 }
@@ -1314,7 +1314,7 @@
     background-color: transparent;
 }
 
-.theme-dark .autocomplete_f23da8 {
+.theme-dark .autocomplete_bcc24e {
     background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
 }
 
@@ -1324,8 +1324,8 @@
     padding: 1px 9px;
 }
 
-.theme-dark .clickable_f23da8[aria-disabled=false]>.base_f23da8:hover,
-.clickable_f23da8[aria-selected=true]>.base_f23da8 {
+.theme-dark .clickable_bcc24e[aria-disabled=false]>.base_bcc24e:hover,
+.clickable_bcc24e[aria-selected=true]>.base_bcc24e {
     background-color: #76AAD9;
     border: 3px outset #76AAD9;
 }
@@ -1374,7 +1374,7 @@
     color: white;
 }
 
-.attachment_a4623d {
+.attachment_b52bef {
     border-color: transparent;
     background-color: rgba(0, 0, 0, .25);
 }
@@ -1668,11 +1668,11 @@
     height: 20px;
 }
 
-.wrapper_b9fe76 {
+.wrapper_a71a1c {
     background-color: rgba(0, 0, 0, .4);
 }
 
-.guildIcon_b9fe76 {
+.guildIcon_a71a1c {
     background-color: transparent;
 }
 
@@ -2166,23 +2166,23 @@
     mask: none;
 }
 
-.item_fd07a3[style*="height: 40px"] {
+.item_c4cd66[style*="height: 40px"] {
     height: 32px !important;
     width: 32px;
     border-radius: 0 2px 2px 0;
     background-color: #61a5d8 !important;
 }
 
-.item_fd07a3[style*="height: 8px"],
-.item_fd07a3[style*="height: 20px"] {
+.item_c4cd66[style*="height: 8px"],
+.item_c4cd66[style*="height: 20px"] {
     height: 12px !important;
     width: 12px;
     border-radius: 0 2px 2px 0;
     background-color: rgba(97, 164, 216, .61) !important;
 }
 
-.theme-dark .card_eb1ca6,
-.theme-dark .iconMask_eb1ca6 {
+.theme-dark .card_e90879,
+.theme-dark .iconMask_e90879 {
     background-color: transparent !important;
 }
 
@@ -2347,7 +2347,7 @@ button.button_f67531.enabled_f67531:hover {
     border-radius: 5px;
 }
 
-.border_a5cd29.speaking_a5cd29 {
+.border_db83a2.speaking_db83a2 {
     border: 4px solid #61A5D8;
     box-shadow: none;
     border-radius: 5px;
@@ -3078,6 +3078,10 @@ button.button_f67531.enabled_f67531:hover {
 .icon_e378b3 {
     color: var(--header-primary);
 }
+.icon_e378b3 path {
+    fill: currentColor;
+}
+  
 
 .iconContainer__1b9f0 {
     border-radius: 5px;
@@ -3603,40 +3607,40 @@ button.button_f67531.enabled_f67531:hover {
 }
 
 .item_b05c08,
-.item_e3c4bb,
-.item_e3c4bb:hover {
+.item_d25d19,
+.item_d25d19:hover {
     background-color: #2D2D2D;
 }
 
-.layoutStyle_a49993 .item_e3c4bb[aria-label="Passthrough"] {
+.layoutStyle_a49993 .item_d25d19[aria-label="Passthrough"] {
     color: #FFDB4D;
 }
 
-.passthrough_e3c4bb.selected_e3c4bb {
+.passthrough_d25d19.selected_d25d19 {
     background-color: #FFDB4D !important;
     color: black !important;
 }
 
 .deny_b05c08,
 .cross_a06168,
-.deny_e3c4bb {
+.deny_d25d19 {
     color: #F42626;
 }
 
 .deny_b05c08.selected_b05c08,
-.deny_e3c4bb.selected_e3c4bb {
+.deny_d25d19.selected_d25d19 {
     background-color: #F42626 !important;
     color: white;
 }
 
 .allow_b05c08,
 .check_a06168,
-.allow_e3c4bb {
+.allow_d25d19 {
     color: #3DD828;
 }
 
 .allow_b05c08.selected_b05c08,
-.allow_e3c4bb.selected_e3c4bb {
+.allow_d25d19.selected_d25d19 {
     background-color: #3DD828 !important;
     color: white;
 }
@@ -4626,3 +4630,11 @@ button.button_f67531.enabled_f67531:hover {
 background-color: #4a5edd
 background-color: #1f3dff
 */
+
+.container_b56bbc {
+    background-color: transparent;
+}
+
+.theme-dark .sidebarContainer_a3a4ce {
+    background: none;
+}
