--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 6.2
+ * @version 6.3
 */
 
 .avatarDecoration_ec86aa {
@@ -322,7 +322,7 @@ textarea,
     background-color: rgba(0, 0, 0, 0.427);
 }
 
-.item_fd07a3 {
+.item_c4cd66 {
     width: 17px;
     background-color: #008c99;
     border-radius: 30px;
@@ -472,20 +472,20 @@ textarea,
     border-radius: 9px;
 }
 
-.theme-dark .card_eb1ca6:hover,
-.theme-dark .card_eb1ca6:hover .iconMask_eb1ca6,
-.theme-dark .iconMask_eb1ca6:hover,
-.theme-dark .iconMask_eb1ca6:hover .iconMask_eb1ca6 {
+.theme-dark .card_e90879:hover,
+.theme-dark .card_e90879:hover .iconMask_e90879,
+.theme-dark .iconMask_e90879:hover,
+.theme-dark .iconMask_e90879:hover .iconMask_e90879 {
     background-color: rgba(0, 140, 153, 0.26);
     border-color: #008c99;
 }
 
-.theme-dark .card_eb1ca6,
-.theme-dark .iconMask_eb1ca6 {
+.theme-dark .card_e90879,
+.theme-dark .iconMask_e90879 {
     background-color: transparent;
 }
 
-.card_eb1ca6 {
+.card_e90879 {
     border-radius: 9px;
 }
 
@@ -984,7 +984,7 @@ textarea,
 }
 
 
-.theme-dark .autocomplete_f23da8 {
+.theme-dark .autocomplete_bcc24e {
     background-color: #262424;
 }
 
@@ -992,8 +992,8 @@ textarea,
     fill: white;
 }
 
-.theme-dark .clickable_f23da8[aria-disabled=false]>.base_f23da8:hover,
-.clickable_f23da8[aria-selected=true]>.base_f23da8 {
+.theme-dark .clickable_bcc24e[aria-disabled=false]>.base_bcc24e:hover,
+.clickable_bcc24e[aria-selected=true]>.base_bcc24e {
     background: linear-gradient(45deg, #008c99 0%, transparent 40%);
 }
 
@@ -1189,8 +1189,7 @@ textarea,
     border: 3px solid transparent;
 }
 
-.withTagAsButton_b2ca13:hover, 
-.withTagless_b2ca13:hover {
+.avatarWrapper_b2ca13:hover {
     background-color: rgba(0, 0, 0, .3);
     border-radius: 4px;
     border: 1px solid #008c99;
@@ -1236,7 +1235,7 @@ textarea,
     color: white;
 }
 
-.theme-dark .attachment_a4623d {
+.theme-dark .attachment_b52bef {
     border-color: transparent;
     background-color: rgba(0, 0, 0, 0.3);
 }
@@ -1519,7 +1518,7 @@ textarea,
     top: -3px;
 }
 
-.theme-dark .embedFull_ad0b71,
+.theme-dark .embedFull_b0068a,
 .theme-dark .wrapperAudio_f72aac {
     background-color: rgba(0, 0, 0, 0.3);
     border-color: transparent;
@@ -1586,7 +1585,7 @@ textarea,
     padding: 3.82px;
 }
 
-.botTagRegular_a02df3,
+.botTagRegular_a9e77f,
 .botTagInvert_a02df3 {
     background: #008c99;
     color: #fff;
@@ -2166,13 +2165,13 @@ textarea,
     background-color: #008c99;
 }
 
-.akaBadge__27cd4 {
+.akaBadge_d6c26f {
     background-color: #008c99;
     color: white;
 }
 
 .border_a5cd29.video-3SrWSI.speaking_a5cd29,
-.border_a5cd29.speaking_a5cd29 {
+.border_db83a2.speaking_db83a2 {
     box-shadow: inset 0 0 22px 3px #008c99;
 }
 
@@ -2283,7 +2282,7 @@ textarea,
     background-color: rgba(0, 0, 0, 0.33);
 }
 
-.wrapper_b211c6,
+.wrapper_b75bb9,
 .wrapper_cdfd51 {
     background-color: transparent;
     overflow: visible;
@@ -2308,7 +2307,7 @@ textarea,
 .mutedChannelsHook_f1ed13,
 .quickswitcher_f4e139 a,
 .theme-dark .topic_bf3bbb a,
-.filenameLinkWrapper_a4623d a,
+.filenameLinkWrapper_b52bef a,
 .operations_ed9386>a,
 .theme-dark .welcomeMessage-ULm0mo a,
 .localBotMessage-1cGMdw a,
@@ -2647,12 +2646,12 @@ textarea,
     color: white;
 }
 
-.textContainer_ad9cbd {
+.textContainer_d8e2d0 {
     background-color: rgba(0, 0, 0, 0.62);
     border: none;
 }
 
-.footer_ad9cbd {
+.footer_d8e2d0 {
     background-color: rgba(0, 0, 0, 0.62);
 }
 
@@ -2871,6 +2870,10 @@ textarea,
 .icon_e378b3 {
     color: var(--header-primary);
 }
+.icon_e378b3 path {
+    fill: currentColor;
+}
+  
 
 .iconContainer__1b9f0 {
     border-radius: 5px;
@@ -3529,40 +3532,40 @@ textarea,
 }
 
 .item_b05c08,
-.item_e3c4bb,
-.item_e3c4bb:hover {
+.item_d25d19,
+.item_d25d19:hover {
     background-color: #2D2D2D;
 }
 
-.layoutStyle_a49993 .item_e3c4bb[aria-label="Passthrough"] {
+.layoutStyle_a49993 .item_d25d19[aria-label="Passthrough"] {
     color: #FFDB4D;
 }
 
-.passthrough_e3c4bb.selected_e3c4bb {
+.passthrough_d25d19.selected_d25d19 {
     background-color: #FFDB4D !important;
     color: black !important;
 }
 
 .deny_b05c08,
 .cross_a06168,
-.deny_e3c4bb {
+.deny_d25d19 {
     color: #F42626;
 }
 
 .deny_b05c08.selected_b05c08,
-.deny_e3c4bb.selected_e3c4bb {
+.deny_d25d19.selected_d25d19 {
     background-color: #F42626 !important; 
     color: white;
 }
 
 .allow_b05c08,
 .check_a06168,
-.allow_e3c4bb {
+.allow_d25d19 {
     color: #3DD828;
 }
 
 .allow_b05c08.selected_b05c08,
-.allow_e3c4bb.selected_e3c4bb {
+.allow_d25d19.selected_d25d19 {
     background-color: #3DD828 !important;
     color: white;
 }
@@ -4557,4 +4560,12 @@ textarea,
 
 .theme-dark .activityUserPopoutV2_d5089b .headerText_d5089b {
     color: white;
+}
+
+.container_b56bbc {
+    background-color: transparent;
+}
+
+.theme-dark .sidebarContainer_a3a4ce {
+    background: none;
 }
