--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 3.5
+ * @version 3.6
 */
 
 .app_a01fb1, 
@@ -221,7 +221,7 @@
     background-color: transparent;
 }
 
-.attachment_a4623d {
+.attachment_b52bef {
     border-color: rgba(255, 255, 255, .1);
     background-color: #282828;
 }
@@ -445,12 +445,12 @@
     fill: #FF0000;
 }
 
-.embedFull_ad0b71 {
+.embedFull_b0068a {
     border: 2px solid rgba(255, 255, 255, .1) !important;
     background: #282828;
 }
 
-.botTagRegular_a02df3 {
+.botTagRegular_a9e77f {
     background: rgba(255, 255, 255, .1) !important;
     color: #F1F1F1 !important;
     font-weight: 600;
@@ -856,7 +856,7 @@
     font-weight: 600;
 }
 
-.selected_e9f61e .layout_e9f61e .botTagRegular_a02df3 {
+.selected_e9f61e .layout_e9f61e .botTagRegular_a9e77f {
     background: rgba(0, 0, 0, .1) !important;
     color: #0F0F0F !important;
     font-weight: 600;
@@ -982,7 +982,7 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.wrapper_b211c6 {
+.wrapper_b75bb9 {
     background-color: transparent;
 }
 
@@ -990,9 +990,9 @@
     background-color: rgba(0, 0, 0, .05);
 }
 
-.attachment_b211c6, 
-.avatar_b211c6, 
-.blob_b211c6 {
+.attachment_b75bb9, 
+.avatar_b75bb9, 
+.blob_b75bb9 {
     background-color: #FF0000;
     opacity: .3 !important;
 }
@@ -1182,28 +1182,28 @@
     background: rgba(255, 255, 255, .1);
 }
 
-.footer_ad9cbd {
+.footer_d8e2d0 {
     background-color: rgba(255, 255, 255, .1);
     border: none;
     border-radius: 0 0 8px 8px;
 }
 
-.textContainer_ad9cbd pre {
+.textContainer_d8e2d0 pre {
     border-radius: 8px 8px 0 0;
 }
 
-.textContainer_ad9cbd {
+.textContainer_d8e2d0 {
     background-color: rgba(255, 255, 255, .1);
     border: none;
     border-radius: 8px 8px 0 0;
 }
 
-.textContainer_ad9cbd .hljs {
+.textContainer_d8e2d0 .hljs {
    background: none;
 }
 
-.filenameLinkWrapper_a4623d,
-.filenameLinkWrapper_a4623d a,
+.filenameLinkWrapper_b52bef,
+.filenameLinkWrapper_b52bef a,
 .metadataContent_f72aac a {
     color: #3ea6ff;
 }
@@ -1267,11 +1267,11 @@
     color: #F1F1F1;
 }
 
-.theme-dark .autocomplete_f23da8 {
+.theme-dark .autocomplete_bcc24e {
     background-color: #FFFFFF;
 }
 
-#app-mount .autocomplete_f23da8 * {
+#app-mount .autocomplete_bcc24e * {
     color: #0F0F0F !important;
     font-weight: 500;
 }
@@ -1285,8 +1285,8 @@
     background-color: transparent;
 }
 
-.clickable_f23da8[aria-disabled=false]>.base_f23da8:hover, 
-.clickable_f23da8[aria-selected=true]>.base_f23da8 {
+.clickable_bcc24e[aria-disabled=false]>.base_bcc24e:hover, 
+.clickable_bcc24e[aria-selected=true]>.base_bcc24e {
     background-color: #eee;
 }
 
@@ -1501,8 +1501,8 @@
     color: #F1F1F1;
 }
 
-.guildCategorySeparator_a7a485,
-.guildCategorySeparator_a7a485 {
+.guildCategorySeparator_dfa278,
+.guildCategorySeparator_dfa278 {
     border: none;
 }
 
@@ -1684,47 +1684,47 @@
     background: #282828;
 }
 
-.group_e3c4bb,
+.group_d25d19,
 .group_b05c08 {
     border: 1px solid rgba(255, 255, 255, .1);;
     border-radius: 30px;
 }
 
-.theme-dark .item_e3c4bb,
+.theme-dark .item_d25d19,
 .theme-dark .item_b05c08 {
     background-color: #282828;
 }
 
-.deny_e3c4bb,
+.deny_d25d19,
 .deny_b05c08 {
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     color: #ea0d0b;
 }
 
-.deny_e3c4bb.selected_e3c4bb,
+.deny_d25d19.selected_d25d19,
 .deny_b05c08.selected_b05c08 {
     background-color: #ea0d0b;
     color: white;
 }
 
-.passthrough_e3c4bb {
+.passthrough_d25d19 {
     color: #ffc319;
 }
 
-.passthrough_e3c4bb.selected_e3c4bb {
+.passthrough_d25d19.selected_d25d19 {
     background-color: #ffc319;
     color: black;
 }
 
-.allow_e3c4bb,
+.allow_d25d19,
 .allow_b05c08 {
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
     color: #00c404;
 }
 
-.allow_e3c4bb.selected_e3c4bb,
+.allow_d25d19.selected_d25d19,
 .allow_b05c08.selected_b05c08 {
     background-color: #00c404;
     color: white;
@@ -2347,7 +2347,7 @@
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.moreUsers_c47562 {
+.moreUsers_d03bba {
     background-color: rgba(255, 255, 255, .1);
     color: #aaa;
 }
@@ -2378,13 +2378,13 @@
 }
 
 .wrapper_faf5ab,
-.wrapper_b9fe76 {
+.wrapper_a71a1c {
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.theme-dark .guildIcon_b9fe76,
-.guildIconExpired_b9fe76 {
+.theme-dark .guildIcon_a71a1c,
+.guildIconExpired_a71a1c {
     background-color: rgba(0, 0, 0, .2);
 }
 
@@ -3285,6 +3285,14 @@ button.button_f67531.enabled_f67531:hover {
     background-color: #FF0000;
 }
 
+.icon_e378b3 {
+    color: white;
+}
+    
+.icon_e378b3 path {
+    fill: currentColor;
+}
+
 .newPostsButton_a6d69a {
     background-color: rgba(255, 255, 255, .1);
     border: 1px solid rgba(255, 255, 255, .2);
@@ -3327,16 +3335,14 @@ button.button_f67531.enabled_f67531:hover {
 }
 
 .defaultImageView_bc05bb,
-.withTagAsButton_b2ca13:hover, 
-.withTagless_b2ca13:hover {
+.avatarWrapper_b2ca13:hover {
     color: #F1F1F1;
 }
 
 .placeholderLine_b36404, 
 .placeholderMedia_b36404,
 .reaction_b36404,
-.withTagAsButton_b2ca13:hover, 
-.withTagless_b2ca13:hover {
+.avatarWrapper_b2ca13:hover {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -3514,8 +3520,8 @@ button.button_f67531.enabled_f67531:hover {
     color: #F1F1F1;
 }
 
-.theme-dark .card_eb1ca6, 
-.theme-dark .iconMask_eb1ca6 {
+.theme-dark .card_e90879, 
+.theme-dark .iconMask_e90879 {
     background-color: rgba(0, 0, 0, .1);
 }
 
@@ -3573,7 +3579,7 @@ button.button_f67531.enabled_f67531:hover {
     background-color: #258d27;
 }
 
-.item_fd07a3 {
+.item_c4cd66 {
     background-color: #FF0000;
     border-radius: 60px;
 }
@@ -3830,19 +3836,19 @@ button.button_f67531.enabled_f67531:hover {
     color: #F1F1F1;
 }
 
-.akaBadge__27cd4 {
+.akaBadge_d6c26f {
     color: #aaa;
 }
 
-.nicknames__12efb {
+.nicknames_d6c26f {
     color: #F1F1F1;
 }
 
-.akaBadge__27cd4 {
+.akaBadge_d6c26f {
     background-color: rgba(255, 255, 255, .1);
 }
 
-.border_a5cd29.speaking_a5cd29 {
+.border_db83a2.speaking_db83a2 {
     box-shadow: inset 0 0 0 2px #FF0000,inset 0 0 0 4px black;
 }
 
@@ -4497,4 +4503,12 @@ button.button_f67531.enabled_f67531:hover {
 
 .theme-dark .activityUserPopoutV2_d5089b .headerText_d5089b {
     color: white;
+}
+
+.container_b56bbc {
+    background-color: transparent;
+}
+
+.theme-dark .sidebarContainer_a3a4ce {
+    background: none;
 }
